# GodLoongBot-Project

./: .gitignore  README.md  config.json  main.py  models.py  pyproject.toml  run.sh  test.py
data/: data.db
module/: __init__.py
module/AI/: __init__.py  metadata.json
module/Help/: __init__.py  metadata.json
module/Nudge/: __init__.py  metadata.json
module/alertSystem/: __init__.py  data.py  metadata.json
module/anyvoice/: __init__.py  metadata.json
module/entertainment/: __init__.py  metadata.json  utils.py
module/groupmanager/: __init__.py  metadata.json
module/groupmanager/cache/: friend_1662869781000000.pkl  friend_1666538142000000.pkl  friend_1666918251000000.pkl  friend_1667976385000000.pkl  friend_1668381919000000.pkl  friend_1669437994000000.pkl  friend_1671547480000000.pkl  group_1662120787798677.pkl  group_1665410298696033.pkl  group_1671022747997035.pkl  group_1671239821007782.pkl  group_1671615550263738.pkl
module/hub_service/: metadata.json
module/lofter/: __init__.py  metadata.json
module/logger/: __init__.py  metadata.json
module/mc/: __init__.py  metadata.json
module/network/: __init__.py  metadata.json  utils.py
module/openai/: __init__.py  config.py  help.py  impl.py  message.py  metadata.json
module/openai/api/: _base.py  chat.py  dispatcher.py  locksmith.py  misc.py
module/petpeter/: __init__.py  metadata.json
module/ping/: __init__.py  metadata.json
module/signin/: __init__.py  create.py  metadata.json
module/song/: __init__.py  metadata.json  song.py
module/sstv/: __init__.py  metadata.json  utils.py
module/stellairs/: __init__.py  generation.py  metadata.json  texts.py  utils.py
module/stellairs/assets/jsons/: events.json
module/system/: __init__.py  metadata.json
tmp/anyvoice/: __init__.py
tmp/groupmanager/: metadata.json
tmp/lofter/: metadata.json
tmp/logger/: metadata.json
tmp/manager/: metadata.json
tmp/petpeter/: __init__.py  metadata.json
tmp/signin/: create.py
tmp/song/: __init__.py  metadata.json
