[tool.poetry]
name = "GodLoongBot"
version = "0.1.0"
description = "Another modular bot"
authors = ["daofengql"]
license = "AGPL-3.0 license"

[tool.poetry.dependencies]
python = "^3.10"
graiax-silkcoder = {extras = ["libsndfile"], version = "^0.3.0"}
graia-saya = "^0.0.16"
graia-scheduler = "^0.0.8"
requests = "^2.28.1"
aioredis = "^2.0.1"
aiomysql = "^0.1.1"
aiocache = "^0.11.1"
aiofiles = "^0.8.0"
fastapi = "^0.79.0"
httpx = "^0.23.0"
ping3 = "^4.0.3"
pillow = "^9.2.0"
numpy = "^1.23.1"
psutil = "^5.9.1"
sqlalchemy = "^1.4.39"
aiohttp = "^3.8.1"
aiosqlite = "^0.17.0"
graia-ariadne = {extras = ["full"], version = "^0.8.4"}
pyinstall = "^0.1.4"
xmltojson = "^2.0.1"
utils = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = false
